# goose

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  Cross.toml  Cross.toml.bk  DAGGER.md  GOOSE_WEB_CANCEL.md  GOOSE_WEB_FINAL.md  GOOSE_WEB_IMPLEMENTATION.md  GOOSE_WEB_SESSIONS.md  Justfile  LEAD_WORKER_FEATURE.md  README.md  build-combined-site  configuration.html  contributing.html  deepseek.md  deepseek_tool_calling.md  download_cli.sh  download_tokenizer_files.py  download_tokenizers.sh  files.txt  git_aware.md  index.html  inkeepChatButton.js  inkeepSearchBar.js  installation.html  objects.inv  package-lock.json  prompt.txt  quickstart.html  recipe.json  recipe.yaml  recipe2.json  run_bench.sh  sitemap.xml  test_lead_worker_feature.sh
benchmark/goosebench/: .gitignore  README.md  config.yaml  hello.py  pyproject.toml
benchmark/goosebench/.github/workflows/: install-and-run-goose.yml
benchmark/goosebench/archive/: test.sh
benchmark/goosebench/goosebench/: bench.py  main.py
crates/developer/: Cargo.toml
crates/developer/src/: errors.rs  lib.rs  main.rs  process_store.rs
crates/goose/: Cargo.toml  build.rs
crates/goose-bench/: Cargo.toml  README.md
crates/goose-bench/src/: bench_config.rs  bench_runner.rs  bench_session.rs  bench_work_dir.rs  config_manager.rs  dataframe_handler.rs  errors.rs  lib.rs  logging.rs  reporting.rs  utilities.rs  work_dir.rs
crates/goose-bench/src/assets/: squirrel-data.csv
crates/goose-bench/src/eval_suites/: evaluation.rs  factory.rs  flappy_bird.rs  list_files.rs  metrics.rs  mod.rs
crates/goose-bench/src/reporting/: mod.rs  report_generators.rs
crates/goose-bench/src/runners/: bench_runner.rs  benchmark_runner.rs  eval_runner.rs  metric_aggregator.rs  mod.rs  model_runner.rs  result_collector.rs
crates/goose-ffi/: Cargo.toml  Dockerfile  README.md  build.rs  goose_ffi.h
crates/goose-ffi/examples/: Dockerfile  GooseExample.kt  Makefile  README.md  auto_execute_tools_demo.py  build.gradle.kts  build_and_run.sh  build_and_test.sh  build_local.sh  end_to_end_example.py  flow_diagram.md  goose_agent.py  goose_agent_fixed.py  goose_tool_demo.py  handle_ffi.py  requirements.txt  run_examples.sh  settings.gradle.kts  test_example_noninteractive.py  test_ffi.py  test_fixed_agent.py  test_goose_agent.py  test_non_yielding.py  test_simple.py  tool_agent.c  tool_agent.py
crates/goose-ffi/examples/kotlin/: GooseExample.kt  README.md  build.gradle.kts  run.sh
crates/goose-ffi/include/: goose_ffi.h
crates/goose-ffi/src/: lib.rs  reply.rs  streaming.rs
crates/goose-llm/: Cargo.toml  README.md  build.rs
crates/goose-llm-py/: Cargo.toml  README.md  example.py  pyproject.toml
crates/goose-llm-py/src/: lib.rs
crates/goose-llm/examples/: icecream.rs  simple.rs
crates/goose-llm/examples/wasm/: index.html  mock.html  providers.html
crates/goose-llm/src/: completion.rs  lib.rs  structured_outputs.rs  wasm.rs  wasm_fixed.rs  wasm_providers.rs
crates/goose-llm/src/extractors/: session_name.rs  tooltip.rs
crates/goose-llm/src/message/: mod.rs
crates/goose-llm/src/providers/: base.rs  databricks.rs  errors.rs  factory.rs  mock.rs  mod.rs  openai.rs
crates/goose-llm/src/types/: completion.rs
crates/goose-llm/tests/: extract_session_name.rs  extract_tooltip.rs  providers_extract.rs
crates/goose-server-a2a/: Cargo.toml
crates/goose-server-a2a/src/: main.rs
crates/goose-uniffi/: Cargo.toml  README.md
crates/goose-uniffi/src/: json_value_ffi.rs  lib.rs  tool_result_serde.rs  types.rs
crates/goose/benches/: tokenization_benchmark.rs
crates/goose/docs/lead-worker/: IMPLEMENTATION_SUMMARY.md  LEAD_WORKER_FEATURE.md  README.md  example-config.yaml  test_lead_worker_feature.sh  test_lead_worker_logging.sh
crates/goose/examples/: agent.rs  databricks_oauth.rs  image_tool.rs
crates/goose/src/: agent.rs  conversation.rs  developer.rs  errors.rs  key_manager.rs  lib.rs  mcp_agent.rs  memory.rs  memory_condense.rs  message.rs  mobile.rs  model.rs  process_store.rs  prompt_template.rs  providers.rs  scheduler.rs  scheduler_factory.rs  scheduler_trait.rs  temporal_scheduler.rs  token_counter.rs  truncate.rs  trust_risk.rs
crates/goose/src/agents/: agent.rs  agent_context.rs  agent_extension.rs  agent_message.rs  agent_permission.rs  agent_tool_processing.rs  capabilities.rs  categorize.rs  default.rs  embeddings.rs  extension.rs  extension_manager.rs  factory.rs  ffi_agent.rs  ffi_agent_design.md  ffi_bindings_guide.md  ffi_solution_summary.md  goose_agent.rs  mcp.rs  mcp_manager.rs  mod.rs  platform_tools.rs  prompt_manager.rs  redact.rs  reference.rs  reply_parts.rs  router_tool_selection.rs  router_tool_selector.rs  router_tools.rs  summarize.rs  summarizer.rs  system.rs  tool_execution.rs  tool_router.rs  tool_router_v2.rs  tool_selector.rs  tool_vectordb.rs  truncate.rs
crates/goose/src/agentv2/: agent.rs  mod.rs
crates/goose/src/audio/: tts.rs
crates/goose/src/config/: base.rs  config_manager.rs  extensions.rs  mod.rs  permission.rs
crates/goose/src/context_mgmt/: summarize.rs
crates/goose/src/gooselings/: gooseling.rs  mod.rs
crates/goose/src/message/: tool_result_serde.rs
crates/goose/src/models/: message.rs
crates/goose/src/permission/: permission_judge.rs  permission_store.rs
crates/goose/src/prompts/: abridge.md  gooseling.md  plan.md  system.md  system_mcp.md
crates/goose/src/providers/: anthropic.rs  base.rs  bedrock.rs  configs.rs  databricks.rs  dummy.rs  errors.rs  factory.rs  (+20 more)
crates/goose/tests/: agent.rs  ffi_agent.rs  huggingface_provider.rs  providers.rs  systems.rs  truncate_agent.rs
crates/mcp-client/: Cargo.toml  README.md
crates/mcp-client/examples/: clients.rs  sse.rs  stdio.rs  stdio_integration.rs
crates/mcp-client/src/: client.rs  lib.rs  main.rs  service.rs  session.rs  sse_transport.rs  stdio_transport.rs  transport.rs  types.rs
crates/mcpclient/: Cargo.toml  README.md
crates/mcpclient/src/: lib.rs  main.rs  session.rs  sse_transport.rs  stdio_transport.rs  transport.rs  types.rs
crates/nondeveloper/: Cargo.toml
crates/nondeveloper/src/: lib.rs  main.rs
(+57113 files in other folders)
