[workspace]
members = [
    "crates/goose",
    "crates/goose-cli",
    "crates/goose-mcp",
    "crates/goose-server",
    "crates/mcp-client",
    "crates/mcp-core",
    "crates/mcp-macros",
    "crates/mcp-server"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.0.4"
authors = ["Block <ai-oss-tools@block.xyz>"]
license = "Apache-2.0"
repository = "https://github.com/block/goose"
description = "An AI agent"