[package]
name = "goose-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/goose"
description = "FFI bindings for the Goose AI agent"

[lib]
name = "goose_ffi"
crate-type = ["cdylib"]

[dependencies]
goose = { path = "../goose" }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20.2"
libc = "0.2"
reqwest = { version = "0.12", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
