[package]
name = "goose-uniffi"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "goose_uniffi"


[dependencies]
goose-llm = { path = "../goose-llm" }
uniffi = "0.29" 
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt"] }
thiserror = "1.0"