[package]
name = "goose-uniffi"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "goose_uniffi"


[dependencies]
goose-llm = { path = "../goose-llm" }
uniffi = { version = "0.29", features = [ "cli" ] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt"] }
thiserror = "1.0"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"