[package]
name = "mcp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-core = { path = "../mcp-core" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-client = "0.12.0"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1.83"
url = "2.5.4"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-retry = "0.3"
tower = { version = "0.4", features = ["timeout", "util"] }
tower-service = "0.3"
tokio-util = { version = "0.7", features = ["io-util", "io"] }
rand = "0.8"

[dev-dependencies]
warp = "0.3"
async-stream = "0.3"
